--- a/ScoutUI/Views/Dialogs/InstrumentStatusDialog.xaml
+++ b/ScoutUI/Views/Dialogs/InstrumentStatusDialog.xaml
@@ -58,8 +58,8 @@
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="1" Orientation="Horizontal">
-                                    <Label Name="lblSoftwareVersion" Content="{Binding ResourceKeys[LID_Label_Softwareversion], Source={StaticResource ScoutUILanguageResource}}"
-                                                       ContentStringFormat="{}{0}:" Style="{StaticResource LabelStyleFontSizeEighteenRegular}" />
+                                    <!--<Label Name="lblSoftwareVersion" Content="{Binding ResourceKeys[LID_Label_Softwareversion], Source={StaticResource ScoutUILanguageResource}}"
+                                                       ContentStringFormat="{}{0}:" Style="{StaticResource LabelStyleFontSizeEighteenRegular}" />-->
                                     <Label Name="lblSoftwareVersionDetails" Foreground="Blue" Content="{Binding ApplicationVersion}"
                                                        Style="{StaticResource LabelStyleFontSizeEighteenRegular}" />
                                 </StackPanel>
