--- a/ScoutUI/Views/Settings/Tabs/SettingsTabPanels/InstrumentSettingsView.xaml
+++ b/ScoutUI/Views/Settings/Tabs/SettingsTabPanels/InstrumentSettingsView.xaml
@@ -40,8 +40,8 @@
                         </WrapPanel>
 
                         <WrapPanel Margin="40,0,0,0" Grid.Row="1">
-                            <Label Content="{Binding ResourceKeys[LID_Label_Softwareversion], Source={StaticResource ScoutUILanguageResource}}"
-                               Width="auto" Style="{StaticResource SettingHeadLabel}" ContentStringFormat="{}{0}:" />
+                            <!--<Label Content="{Binding ResourceKeys[LID_Label_Softwareversion], Source={StaticResource ScoutUILanguageResource}}"
+                               Width="auto" Style="{StaticResource SettingHeadLabel}" ContentStringFormat="{}{0}:" />-->
                             <Label Content="{Binding ApplicationVersion}" Width="auto" Style="{StaticResource SettingLabel}" />
                         </WrapPanel>
 
@@ -95,7 +95,7 @@
                     </StackPanel>
 
                     <StackPanel Grid.Row="2" Grid.Column="3" Orientation="Horizontal" Margin="3,0,0,0" HorizontalAlignment="Left">
-                        <PasswordBox MaxLength="15" Width="200" Height="40" VerticalAlignment="Top" controls:PasswordHandler.Attach="True"
+                        <PasswordBox MaxLength="16" Width="200" Height="40" VerticalAlignment="Top" controls:PasswordHandler.Attach="True"
                                  controls:PasswordHandler.Password="{Binding Password,Mode=TwoWay}" Style="{StaticResource PasswordLoginRunStyle}" />
                     </StackPanel>
 
@@ -311,7 +311,7 @@
                                Height="40"
                                Margin="0 -5 0 0"
                                Content="{Binding ResourceKeys[LID_Label_ChoosePassword], Source={StaticResource ScoutUILanguageResource}}" />
-                        <PasswordBox MaxLength="15" 
+                        <PasswordBox MaxLength="16" 
                                      Width="200" 
                                      Height="40" 
                                      Margin="10 5 0 0"
@@ -328,7 +328,7 @@
                                Height="40" 
                                Margin="0 0 0 0"
                                Content="{Binding ResourceKeys[LID_Label_ConfirmPassword], Source={StaticResource ScoutUILanguageResource}}" />
-                        <PasswordBox MaxLength="15" 
+                        <PasswordBox MaxLength="16" 
                                      Width="200" 
                                      Height="40"
                                      Margin="5 5 0 0"
@@ -356,10 +356,11 @@
 
             <GroupBox Grid.Row="6" Style="{StaticResource SettingGroupBox}" VerticalAlignment="Top" Margin="0 -15 0 0"
                   Visibility="{Binding IsServiceUser, Converter={StaticResource BooleanToVisibilityConverter}}"
-                  Header="Optics Configuration">
+                  Header="{Binding ResourceKeys[LID_Label_Optics_Override], Source={StaticResource ScoutUILanguageResource}}">
 
                 <Grid Margin="40,0">
                     <Grid.RowDefinitions>
+                        <RowDefinition />
                         <RowDefinition />
                         <RowDefinition />
                     </Grid.RowDefinitions>
@@ -369,19 +370,25 @@
                     </Grid.ColumnDefinitions>
 
                     <RadioButton Grid.Row="0"
-                                 Content="Legacy Optics" 
+                                 Content="{Binding ResourceKeys[LID_Label_Optics_Omicron_Basler], Source={StaticResource ScoutUILanguageResource}}"
                                  Style="{StaticResource SettingRadioButton}" 
                                  Foreground="{DynamicResource GenericVeryLight}"
                                  IsChecked="{Binding IsOpticsLegacyChecked, Mode=TwoWay}" 
                                  Margin="5" />
 
                     <RadioButton Grid.Row="1" 
-                                 Content="Beckman Illumination + Basler Camera" 
+                                 Content="{Binding ResourceKeys[LID_Label_Optics_Beckman_Basler], Source={StaticResource ScoutUILanguageResource}}"
                                  Style="{StaticResource SettingRadioButton}" 
                                  Foreground="{DynamicResource GenericVeryLight}"
                                  IsChecked="{Binding IsOpticsBaslerChecked, Mode=TwoWay}" 
                                  Margin="5 -5 5 5" />
 
+                    <RadioButton Grid.Row="2" 
+                                 Content="{Binding ResourceKeys[LID_Label_Optics_Beckman_Allied], Source={StaticResource ScoutUILanguageResource}}"
+                                 Style="{StaticResource SettingRadioButton}" 
+                                 Foreground="{DynamicResource GenericVeryLight}"
+                                 IsChecked="{Binding IsOpticsAlliedChecked, Mode=TwoWay}" 
+                                 Margin="5 5 5 15" />
 
                     <Button Name="SaveOpticsConfigurationButton" 
                             Grid.Column="1" 
