--- a/ScoutUI/Views/Dialogs/ReagentStatusDialog.xaml
+++ b/ScoutUI/Views/Dialogs/ReagentStatusDialog.xaml
@@ -48,18 +48,18 @@
                         <Label Name="lblEventsRemaining" Foreground="{DynamicResource GenericVeryLight}" FontSize="20" FontWeight="Bold" Content="{Binding EventsRemaining, Mode=OneWay}" />
                     </StackPanel>
 
-                    <Grid Grid.Row="2" Grid.Column="1">
+					<Grid Grid.Row="2" Grid.Column="1" Visibility="{Binding HasReagentPack}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="160" />
                             <ColumnDefinition Width="16" />
                             <ColumnDefinition Width="30" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-<!--
-                        <Image Source="{StaticResource Reagent_ImageSource}" Grid.Column="0" />
-                        <ProgressBar Name="pgrEventRemaining" Minimum="0" Maximum="100" Orientation="Vertical" Grid.Column="1" Height="284"
-                                         Value="{Binding ProgressIndicator, Mode=OneWay}" Style="{StaticResource VerticalProgressBarStyle}" />
--->
+
+						<Image Name="imgReagentPack" Source="{StaticResource Reagent_ImageSource}" Grid.Column="0" />
+
+						<ProgressBar Name="pgrEventRemaining" Minimum="0" Maximum="100" Orientation="Vertical" Grid.Column="1" Height="284"
+                                         Value="{Binding ProgressIndicator, Mode=OneWay}" Style="{StaticResource VerticalProgressBarStyle}"/>
                     </Grid>
                 </Grid>
 
@@ -72,8 +72,9 @@
                         <RowDefinition Height="25" />
                     </Grid.RowDefinitions>
 
-<!--
-                    <Border Grid.Row="1" BorderThickness="1.5" BorderBrush="{DynamicResource GenericVeryDark}" Width="450" Height="330" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="84,0,0,0">
+                    <Border Grid.Row="1" BorderThickness="1.5" BorderBrush="{DynamicResource GenericVeryDark}" 
+						Width="450" Height="330" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="84,0,0,0"
+						Visibility="{Binding HasReagentPack}">
                         <Grid Width="450" HorizontalAlignment="Left">
 	                        <ListBox Style="{StaticResource BaseListBoxStyle}" x:Name="lstReagent" Background="{DynamicResource GenericVeryLight}" ScrollViewer.HorizontalScrollBarVisibility="Hidden"
 	                                 ScrollViewer.VerticalScrollBarVisibility="Hidden" ItemsSource="{Binding ReagentContainers, Mode=OneWay}">
@@ -220,7 +221,7 @@
                             </ListBox>
                         </Grid>
                     </Border>
--->
+
 
                     <Grid Grid.Row="3">
                         <StackPanel x:Name="stkPrimeInProgress" Orientation="Vertical">
