--- a/ScoutUI/Views/Reports/ResultsRunResultsView.xaml
+++ b/ScoutUI/Views/Reports/ResultsRunResultsView.xaml
@@ -85,7 +85,7 @@
                        Content="{Binding ResourceKeys[LID_Label_PrintTitle], Source={StaticResource ScoutUILanguageResource}}"
                        Style="{StaticResource ReportCommonLabelStyle}" Margin="0,0,15,0" />
                 <TextBox Grid.Column="1" Style="{StaticResource ResultTextBoxStyle}" MaxLength="30"
-                         Text="{Binding ReportPrintTitle,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" BorderThickness="0"
+                         Text="{Binding ApplicationVersion}" BorderThickness="0"
                          HorizontalAlignment="Left"
                          commonHelper:ControlValidationHelper.TrimText="True"
                          Height="40" Width="300" />
