--- a/ScoutUI/Views/Dialogs/DecontaminateDialog.xaml
+++ b/ScoutUI/Views/Dialogs/DecontaminateDialog.xaml
@@ -52,7 +52,18 @@
                                    Text="{Binding ResourceKeys[LID_HELP_PrePareSolution], Source={StaticResource ScoutUILanguageResource}}"  />
                 </StackPanel>
 
-                 <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="3">
+                <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="1">
+                    <BulletDecorator Margin="0,12,0,0">
+                        <BulletDecorator.Bullet>
+                            <Ellipse Height="10" Width="10" Fill="{DynamicResource GenericVeryDark}" />
+                        </BulletDecorator.Bullet>
+                    </BulletDecorator>
+
+                    <Label Name="lblDecontaminateDescriptionline3" Margin="15,0,0,0" Style="{StaticResource LabelStyleFontSizeEighteenRegular}"
+                               Content="{Binding ResourceKeys[LID_HELP_EmptyPostion], Source={StaticResource ScoutUILanguageResource}}"  />
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="3" Visibility="{Binding HasCarousel}">
                     <BulletDecorator Margin="0,12,0,0">
                         <BulletDecorator.Bullet>
                             <Ellipse Height="10" Width="10" Fill="{DynamicResource GenericVeryDark}" />
