--- a/ScoutUI/Views/Dialogs/ReagentStatusDialog.xaml
+++ b/ScoutUI/Views/Dialogs/ReagentStatusDialog.xaml
@@ -48,7 +48,7 @@
                         <Label Name="lblEventsRemaining" Foreground="{DynamicResource GenericVeryLight}" FontSize="20" FontWeight="Bold" Content="{Binding EventsRemaining, Mode=OneWay}" />
                     </StackPanel>
 
-					<Grid Grid.Row="2" Grid.Column="1" Visibility="{Binding HasReagentPack}">
+                    <Grid Grid.Row="2" Grid.Column="1" Visibility="{Binding HasReagentPack}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="160" />
                             <ColumnDefinition Width="16" />
@@ -56,10 +56,10 @@
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
 
-						<Image Name="imgReagentPack" Source="{StaticResource Reagent_ImageSource}" Grid.Column="0" />
+                        <Image Source="{StaticResource Reagent_ImageSource}" Grid.Column="0" />
 
-						<ProgressBar Name="pgrEventRemaining" Minimum="0" Maximum="100" Orientation="Vertical" Grid.Column="1" Height="284"
-                                         Value="{Binding ProgressIndicator, Mode=OneWay}" Style="{StaticResource VerticalProgressBarStyle}"/>
+                        <ProgressBar Name="pgrEventRemaining" Minimum="0" Maximum="100" Orientation="Vertical" Grid.Column="1" Height="284"
+                                         Value="{Binding ProgressIndicator, Mode=OneWay}" Style="{StaticResource VerticalProgressBarStyle}" />
                     </Grid>
                 </Grid>
 
@@ -76,8 +76,8 @@
 						Width="450" Height="330" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="84,0,0,0"
 						Visibility="{Binding HasReagentPack}">
                         <Grid Width="450" HorizontalAlignment="Left">
-	                        <ListBox Style="{StaticResource BaseListBoxStyle}" x:Name="lstReagent" Background="{DynamicResource GenericVeryLight}" ScrollViewer.HorizontalScrollBarVisibility="Hidden"
-	                                 ScrollViewer.VerticalScrollBarVisibility="Hidden" ItemsSource="{Binding ReagentContainers, Mode=OneWay}">
+                            <ListBox Style="{StaticResource BaseListBoxStyle}" x:Name="lstReagent" Background="{DynamicResource GenericVeryLight}" ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                                         ScrollViewer.VerticalScrollBarVisibility="Hidden" ItemsSource="{Binding ReagentContainers, Mode=OneWay}">
 
                                 <ListBox.ItemsPanel>
                                     <ItemsPanelTemplate>
@@ -222,7 +222,6 @@
                         </Grid>
                     </Border>
 
-
                     <Grid Grid.Row="3">
                         <StackPanel x:Name="stkPrimeInProgress" Orientation="Vertical">
                             <Label Content="{Binding Status, Mode=TwoWay}" FontSize="18" Foreground="{DynamicResource GenericVeryLight}" 
@@ -262,7 +261,6 @@
                     <Button Grid.Row="2" Grid.Column="2" Content="{Binding ResourceKeys[LID_ButtonContent_ReplaceReagentPack], Source={StaticResource ScoutUILanguageResource}}" 
                                 Command="{Binding ReplaceReagentCommand}" IsEnabled="{Binding IsReplaceReagentActive}" 
                                 Style="{StaticResource SignLeftUserButtonStyle}" Width="250" HorizontalAlignment="Center" />
-
                 </Grid>
             </Grid>
         </Border>
