--- a/ScoutUI/Views/Reports/ResultsQualityControlUserControlView.xaml
+++ b/ScoutUI/Views/Reports/ResultsQualityControlUserControlView.xaml
@@ -69,7 +69,7 @@
                        Style="{StaticResource ReportCommonLabelStyle}" Margin="10,0,5,0" />
 
                 <TextBox Grid.Column="1" Style="{StaticResource ResultTextBoxStyle}" MaxLength="30"
-                         Text="{Binding PrintTitle, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                         Text="{Binding ApplicationVersion}"
                          HorizontalAlignment="Left" controlHelper:ControlValidationHelper.TrimText="True"
                          BorderThickness="0" Height="40" Width="300" IsTabStop="{Binding IsOpenFileEnable}"/>
             </Grid>
