--- a/ScoutUI/Views/Settings/SettingsView.xaml
+++ b/ScoutUI/Views/Settings/SettingsView.xaml
@@ -1,12 +1,9 @@
 <UserControl x:Class="ScoutUI.Views.Admin.UserControls.SettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ScoutUI.Views.Admin.UserControls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:converter="clr-namespace:ScoutUI.Common.Converters"
              xmlns:Storage="clr-namespace:ScoutUI.Views.Storage.UserControls"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:commonControls="clr-namespace:ScoutUI.Views.CommonControls"
              xmlns:settings="clr-namespace:ScoutUI.Views.Settings"
              xmlns:tabs="clr-namespace:ScoutUI.Views.Settings.Tabs"
@@ -113,7 +110,7 @@
                         <ColumnDefinition Width="2*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="{Binding UiSoftwareVersion, Mode=OneWay}" FontSize="40" 
+                    <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="{Binding ApplicationVersion, Mode=OneWay}" FontSize="40" 
                            Style="{StaticResource LabelStyleFontSizeEighteenRegular}" HorizontalAlignment="Center" />
 
                     <StackPanel Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Margin="0,20,0,50">
