--- a/ScoutUI/Views/Service/ServiceMainView.xaml
+++ b/ScoutUI/Views/Service/ServiceMainView.xaml
@@ -1,14 +1,6 @@
 ﻿<UserControl x:Class="ScoutUI.Views.Service.ServiceMainView" Name="ucService"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:ScoutUI.Views.Service"
-             xmlns:Converters="clr-namespace:ScoutUI.Common.Converters"
-             xmlns:Circle="clr-namespace:ScoutUI.Views.ucCommon"
-             xmlns:viewModels="clr-namespace:ScoutViewModels.ViewModels.Service;assembly=ScoutViewModels"
-             xmlns:ServiceView="clr-namespace:ScoutUI.Views.Service"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              Focusable="False" IsTabStop="False" KeyboardNavigation.TabNavigation="Local"
              Width="1280" Height="740" FontFamily="Segoe UI">
     <Grid>
@@ -86,9 +78,9 @@
                                 </TabItem.HeaderTemplate>
                                 <ContentControl Content="{Binding OpticsControlsCommonContent}" Focusable="False" KeyboardNavigation.IsTabStop="False" KeyboardNavigation.TabNavigation="Local"/>
                             </TabItem>
-<!--
-                            <TabItem Name="tbiMotorReg" Style="{StaticResource CommonTabItemStyle}">
-                                <TabItem.HeaderTemplate>
+
+							<TabItem Name="tbiMotorReg" Style="{StaticResource CommonTabItemStyle}" Visibility="{Binding ShowAll}">
+								<TabItem.HeaderTemplate>
                                     <DataTemplate>
                                         <StackPanel Orientation="Horizontal">
                                             <Rectangle Width="30" Height="30" Margin="4">
@@ -103,12 +95,13 @@
                                 </TabItem.HeaderTemplate>
                                 <ContentControl Content="{Binding MotorRegContent}" Focusable="False" KeyboardNavigation.IsTabStop="False" KeyboardNavigation.TabNavigation="Local"/>
                             </TabItem>
--->
+
                         </TabControl>
                     </Grid>
                 </TabItem>
-<!--
+
                 <TabItem Name="tbCalibration" IsSelected="{Binding SelectedStandardCalibration,Mode=TwoWay}"
+                         Visibility="{Binding ShowAll}"
                          TabIndex="2"
                          Foreground="{DynamicResource GenericVeryLight}" Style="{StaticResource CommonTabItemStyle}"
                          IsEnabled="{Binding IsMotorRunning,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}">
@@ -131,7 +124,7 @@
                                         KeyboardNavigation.TabNavigation="Local"/>
                     </Grid>
                 </TabItem>
--->
+
                 <TabItem Name="tbACupCalibration" IsSelected="{Binding SelectedACupCalibration,Mode=TwoWay}"
                          Visibility="{Binding IsACupEnabled,Converter={StaticResource BooleanToVisibilityConverter}}"
                          TabIndex="3"
