- Added InstrumentType variant selection.

--- a/ScoutUI/ResourceDictionaries/CustomControlStyles/AutomationCupControl.xaml
+++ b/ScoutUI/ResourceDictionaries/CustomControlStyles/AutomationCupControl.xaml
@@ -27,7 +27,7 @@
                                                 <ControlTemplate>
                                                     <Grid>
                                                         <!-- GROUP -->
-                                                        <Path Data="M14.17,113.73l.3,0V110c0-.72,0-1.81,13-1.81s13,1.09,13,1.67v3.6l.19,0V99.62a4.6,4.6,0,0,0-1.23-2.84,7.11,7.11,0,0,0-3.53-1.64H16.26a8.4,8.4,0,0,1-4.45-2.07,5.25,5.25,0,0,1-.39-.51V120.5a3.77,3.77,0,0,0,2,3.3V113.67Z"
+                                                        <!--<Path Data="M14.17,113.73l.3,0V110c0-.72,0-1.81,13-1.81s13,1.09,13,1.67v3.6l.19,0V99.62a4.6,4.6,0,0,0-1.23-2.84,7.11,7.11,0,0,0-3.53-1.64H16.26a8.4,8.4,0,0,1-4.45-2.07,5.25,5.25,0,0,1-.39-.51V120.5a3.77,3.77,0,0,0,2,3.3V113.67Z"
                                                               Fill="{DynamicResource Border_Gray}"/>
                                                         <Path Data="M47,65.32a2,2,0,0,0-.76-.71,2,2,0,0,0-.93-.24H18.81a2,2,0,0,0-.93.24,2,2,0,0,0-1.05,1.74V82.14a2,2,0,0,0,2,2H45.27a2,2,0,0,0,2-2V66.35A2,2,0,0,0,47,65.32Z"
                                                               Fill="{DynamicResource GenericVeryLight}"/>
@@ -40,7 +40,7 @@
                                                         <Path Data="M63.09,65.32H50a5.07,5.07,0,0,1,.11,1V82.14A4.84,4.84,0,0,1,45.27,87H18.81A4.84,4.84,0,0,1,14,82.14V66.35a4.58,4.58,0,0,1,.09-.83,3.79,3.79,0,0,0-2.65,3.6V87.31c.05,1,.4,3.73,1.41,4.78a7.11,7.11,0,0,0,3.53,1.64H35.93a8.44,8.44,0,0,1,4.45,2.06A6,6,0,0,1,42,99.62V114.7l-.62.08-1.68.2c-1.12.48-4.09.9-11.8.91h-.47a69.63,69.63,0,0,1-11-.56l-1.6-.12v9c.13,0,.26,0,.4,0H63.09a3.79,3.79,0,0,0,3.79-3.79V69.12A3.8,3.8,0,0,0,63.09,65.32Zm2.18,11.73a1.46,1.46,0,0,1-1.46,1.46H54.56a1.46,1.46,0,0,1-1.45-1.46V75.89a1.45,1.45,0,0,1,1.45-1.46h9.25a1.46,1.46,0,0,1,1.46,1.46Z"
                                                               Fill="{DynamicResource Border_Gray}"/>
                                                         <Path Data="M50,65.32a5.88,5.88,0,0,0-.23-.71,3.9,3.9,0,0,0-.35-.71,4.8,4.8,0,0,0-4.14-2.38H18.81A4.83,4.83,0,0,0,14.64,64a6.41,6.41,0,0,0-.35.75,4.4,4.4,0,0,0-.22.81,4.58,4.58,0,0,0-.09.83V82.14A4.84,4.84,0,0,0,18.81,87H45.27a4.84,4.84,0,0,0,4.83-4.83V66.35A5.07,5.07,0,0,0,50,65.32Zm-2.74,1V82.14a2,2,0,0,1-2,2H18.81a2,2,0,0,1-2-2V66.35a2,2,0,0,1,2-2H45.27a2,2,0,0,1,.93.24,2,2,0,0,1,.76.71A2,2,0,0,1,47.25,66.35Z"
-                                                              Fill="{DynamicResource GenericMediumDark}"/>
+                                                              Fill="{DynamicResource GenericMediumDark}"/>-->
                                                         <!-- END GROUP -->
 
                                                         <Polygon Points="119.91 144.01 116.67 138.82 116.67 124.21 120.13 124.21 120.13 117.66 107.65 117.66 107.65 38.24 189.5 38.24 189.5 117.66 177.02 117.66 177.02 124.21 180.49 124.21 180.49 138.82 177.24 144.01 119.91 144.01"
