--- a/ScoutUI/Views/Dialogs/InstrumentStatusDialog.xaml
+++ b/ScoutUI/Views/Dialogs/InstrumentStatusDialog.xaml
@@ -57,6 +57,8 @@
                                 </StackPanel>
 
                                 <StackPanel Grid.Row="1" Orientation="Horizontal">
+                                    <Label Name="lblSoftwareVersion" Content="{Binding ApplicationVersion}"
+                                                       ContentStringFormat="{}{0}:" Style="{StaticResource LabelStyleFontSizeEighteenRegular}" />
                                     <Label Name="lblSoftwareVersionDetails" Foreground="Blue" Content="{Binding ApplicationVersion}"
                                                        Style="{StaticResource LabelStyleFontSizeEighteenRegular}" />
                                 </StackPanel>
