--- a/ScoutUI/Views/Reports/Completed_Run_Summary_ResultView.xaml
+++ b/ScoutUI/Views/Reports/Completed_Run_Summary_ResultView.xaml
@@ -91,7 +91,7 @@
                    Content="{Binding ResourceKeys[LID_Label_PrintTitle], Source={StaticResource ScoutUILanguageResource}}"
                    Style="{StaticResource ReportCommonLabelStyle}" Margin="10,0,5,0" />
             <TextBox Grid.Column="1" Style="{StaticResource ResultTextBoxStyle}" MaxLength="30"
-                     Text="{Binding ApplicationVersion}" BorderThickness="0"
+                     Text="{Binding PrintTitle, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" BorderThickness="0"
                      helper:ControlValidationHelper.TrimText="True"
                      Height="40" Width="300" HorizontalAlignment="Left" />
         </Grid>
