--- a/ScoutUI/Views/Reports/InstrumentStatusResultView.xaml
+++ b/ScoutUI/Views/Reports/InstrumentStatusResultView.xaml
@@ -53,7 +53,7 @@
                    Content="{Binding ApplicationVersion}"
                    Style="{StaticResource ReportCommonLabelStyle}" Margin="10,0,5,0" />
             <TextBox Grid.Column="1" Style="{StaticResource ResultTextBoxStyle}" MaxLength="30"
-                     Text="{Binding ApplicationVersion}" BorderThickness="0"
+                     Text="{Binding PrintTitle, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" BorderThickness="0"
                      helper:ControlValidationHelper.TrimText="True"
                      Height="40" Width="300" HorizontalAlignment="Left" />
         </Grid>
