--- a/ScoutUI/Views/Home/HomeView.xaml
+++ b/ScoutUI/Views/Home/HomeView.xaml
@@ -104,7 +104,7 @@
                     Command="{Binding EjectButtonCommand}"
                     Background="{StaticResource Button_Enabled_Background}"
                     BorderBrush="{StaticResource Border_Light}"
-                    Visibility="{Binding VCRButtonsAreVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    Visibility="{Binding ShowEjectButton, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <Image Source="{StaticResource EjectSource}" Margin="0,0,2,5"/>
             </Button>
             <Button Grid.Column="2" TabIndex="5" Uid="btnSampleRunPause"
