--- a/ScoutUI/Views/CommonControls/SampleTemplateUserControl.xaml
+++ b/ScoutUI/Views/CommonControls/SampleTemplateUserControl.xaml
@@ -63,6 +63,7 @@
                 </TextBox>
 
                 <Button Uid="btnSampleTemplateSettings" TabIndex="1" 
+						Visibility="{Binding IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
                         Style="{StaticResource RoundButtonDashBoardStyle}"
                         Command="{Binding TemplateSettingsCommand}"
                         Width="30" Height="30" Margin="0,0,0,4"
